prusti-tests/tests/verify_overflow/fail/assert_assume_refute/simple_assert.rs
use prusti_contracts::*;

fn main() {
    prusti_assert!(false) //~ ERROR
}
